defined openapi spec and data models
