# app/models/todo_item.py
@@ -1,0 +1,8 @@
+from pydantic import BaseModel
+
+
+class TodoItem(BaseModel):
+    id: int
+    data: str
+    completed: bool
+    completed_timestamp: int
